; ModuleID = '/home/carl/AnghaBench/git/extr_sequencer.c_get_item_line_length.c'
source_filename = "/home/carl/AnghaBench/git/extr_sequencer.c_get_item_line_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.todo_list = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.todo_list*, i32)* @get_item_line_length to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_item_line_length(%struct.todo_list* %0, i32 %1) #0 {
  %3 = alloca %struct.todo_list*, align 8
  %4 = alloca i32, align 4
  store %struct.todo_list* %0, %struct.todo_list** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.todo_list*, %struct.todo_list** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = add nsw i32 %6, 1
  %8 = call i32 @get_item_line_offset(%struct.todo_list* %5, i32 %7)
  %9 = load %struct.todo_list*, %struct.todo_list** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @get_item_line_offset(%struct.todo_list* %9, i32 %10)
  %12 = sub nsw i32 %8, %11
  ret i32 %12
}

declare dso_local i32 @get_item_line_offset(%struct.todo_list*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
